Fixed image transform overflow issue

--- a/src/app/style/style.less
+++ b/src/app/style/style.less
@@ -45,9 +45,9 @@ body {
           color: #009cff;
         }
         .image img {
-          -moz-transform: scale(1.05);
-          -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+          -moz-transform: scale(1.1);
+          -webkit-transform: scale(1.1);
+          transform: scale(1.1);
         }
         .inner {
           box-shadow: 0 0 12px 3px rgba(226, 226, 226, 1);
@@ -70,6 +70,7 @@ body {
             -moz-transition: all 0.5s;
             -webkit-transition: all 0.5s;
             transition: all 0.5s;
+            display:block;
           }
           .info {
             color: white;
